# FinancialAICompanion

./: main.py  pyproject.toml  requirements.txt  test.py
.streamlit/: config.toml
assets/: style.css
attached_assets/: Pasted-Error-loading-stock-data-psycopg2-errors-InvalidSchemaName-schema-np-does-not-exist-LINE-1--1740673947341.txt  Top 20 Funds by Projected 2025 Returns.docx
utils/: API_integration.py  ai_helper.py  database.py  financial_data.py  fund_analyzer.py  investment_advisor.py  portfolio_viz.py  visualization.py
