[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.4",
    "openai>=1.64.0",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "psycopg2-binary>=2.9.10",
    "python-docx>=1.1.2",
    "sqlalchemy>=2.0.38",
    "streamlit>=1.42.2",
    "yfinance>=0.2.54",
]
